# Video-Stabilization

./: .gitignore  CMakeLists.txt  LICENSE  README.md  _config.yml
docs/: math-overview.md
docs/_layouts/: default.html
include/: camera_engine.hpp  stabilizer.hpp  tracker.hpp
src/: camera_engine.cpp  main.cpp  main_utils.cpp  main_utils.hpp  stabilizer.cpp  tracker.cpp
